--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "speakeasy": "^2.0.0"
   }
 }
