--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,11 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "@firebase/firestore": "^4.3.2",
+    "@sendgrid/mail": "^7.7.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^10.5.2",
     "speakeasy": "^2.0.0"
   }
 }
